# realtime-commerce-analytics

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/: events.csv  orders.csv
docs/: architecture.md
sql/: mysql_init.sql
src/commerce_analytics/: __init__.py  main.py
src/commerce_analytics/config/: __init__.py  settings.py
src/commerce_analytics/extract/: __init__.py  mysql_catalog.py
src/commerce_analytics/load/: __init__.py  redis_writer.py  s3_writer.py
src/commerce_analytics/models/: __init__.py
src/commerce_analytics/orchestration/: __init__.py  dag_streamcart_batch.py
src/commerce_analytics/streaming/: __init__.py  bot_detector.py  kafka_consumer.py  sessionizer.py
src/commerce_analytics/transform/: __init__.py  clv.py  funnel.py
tests/: test_bot_detector.py  test_sessionizer.py
