[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce_analytics"
version = "0.1.0"
description = "Kafka clickstream + Airflow batch for e-commerce sessions, CLV, funnels"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.9",
    "confluent-kafka>=2.3.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "lifetimes>=0.11.3",
    "user-agents>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
    "mypy>=1.9.0",
    "faker>=24.0.0",
]
airflow = ["apache-airflow>=2.8.0"]

[project.scripts]
commerce_analytics = "commerce_analytics.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "C4"]
ignore = ["S101"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
